--- a/css/quiz2.css
+++ b/css/quiz2.css
@@ -59,3 +59,54 @@ img, .img, #img{
     margin: 20% 0;
     justify-content: center;
 }
+
+@media (min-width: 768px) {
+    #options {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    #options button {
+        width: calc(50% - 1%); /* 50% width with some spacing in between */
+        margin-bottom: 10px; /* Add spacing between rows */
+    }
+
+    main {
+        margin: 0 20%;
+    }
+
+    img, .img, #img{
+        width: 50%;
+    }
+
+    .quizh1{
+        padding: 5%;
+        padding-top: 0;
+        color: #000000;
+        font-size: 26px;
+        color: #f7f7f7;
+    }
+
+    #score{
+        border-radius: 50px;
+        background-color: #f7f7f7;
+        width: 10%;
+        margin-left: 110%;
+        padding: 5%;
+        margin-top: -14%;
+    }
+
+    #quiz-container {
+        margin-top: 0;
+    }
+
+    .back{
+        padding: 2%;
+        background-color: #f7f7f7;
+        width: 10%;
+        border-radius: 50px;   
+        margin-top: -48%;    
+    }
+
+}
