--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,38 @@
+header img{
+  width: 10%;
+  display: flex;
+  padding-top: 1%;
+  padding-left: 1%;
+}
+
+header {
+  background-color: #16D5DB;
+  color: #fff;
+  text-align: center;
+  padding: 10px 0;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+nav ul li {
+  display: inline;
+  margin-right: 20px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 24px;
+}
+
+nav ul li a:hover {
+  color: #ffcc00;
+}
+
 img {
   width: 50%;
 }
@@ -19,7 +54,7 @@ p {
 
 /* Style the individual templates */
 .svamp {
-  background-color: #f0f0f0;
+  background-color: #16D5DB;
   padding: 20px;
   border: 1px solid #ddd;
   text-align: center;
@@ -41,10 +76,33 @@ p {
   color: #555;
 }
 
-.powers,
-.weaknesses {
-  margin-top: 10px;
+#filterForm {
+  text-align: center;
+  margin: 20px auto;
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
+
+button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 8px 20px;
+  font-size: 1rem;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+h1 {
+  text-align: center;
+  font-size: 2rem;
+  margin-top: 20px;
+  color: #333;
+}
+
+
 
 /* Responsive layout for mobile */
 @media (max-width: 768px) {
@@ -55,4 +113,21 @@ p {
   .svamp {
     width: 100%;
   }
+
+  nav ul li {
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  nav ul li:last-child {
+    margin-bottom: 0;
+  }
 }
+
+
+
+
+
+
+
+
