--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ p {
 
 @font-face {
   font-family: Comfortaa;
-  src: url(../font/Comfortaa_Bold.ttf);
+  src: url(../font/comfortaa_bold-webfont.woff);
   font-weight: bold;
 }
 
