--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,44 @@
-main{
+main {
   margin: 0 20%;
 }
 
-header img{
+#animated-button {
+  background-color: #ffff01;
+  color: #000000;
+  font-size: 18px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transform-origin: center; /* Set the transform origin to the center */
+  animation: moveButton 3s linear infinite; /* Apply the animation */
+}
+
+/* Add hover effect */
+#animated-button:hover {
+  animation: none; /* Remove animation on hover */
+}
+
+/* Add a keyframe animation to make it move */
+@keyframes moveButton {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(15px);
+  }
+  50% {
+    transform: translateX(10px);
+  }
+  75% {
+    transform: translateX(20px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+header img {
   width: 10%;
   display: flex;
   padding-top: 1%;
@@ -11,7 +47,7 @@ header img{
 }
 
 header {
-  background-color: #16D5DB;
+  background-color: #16d5db;
   color: #fff;
   text-align: center;
   padding: 10px 0;
@@ -30,9 +66,9 @@ nav ul li {
 
 nav ul li a {
   text-decoration: none;
-  
+
   font-size: 24px;
-  
+
   border-radius: 50px;
   padding: 1%;
   background-color: #00a84e;
@@ -40,15 +76,15 @@ nav ul li a {
 }
 
 nav ul li a:hover {
- background-color: #fff;
- color: #16D5DB;
+  background-color: #fff;
+  color: #16d5db;
 }
 
 img {
   width: 50%;
 }
 
-.opskrift{
+.opskrift {
   display: none;
 }
 
@@ -76,18 +112,18 @@ p {
 
 /* Style the individual templates */
 .svamp {
-  background-color: #16D5DB;
+  background-color: #16d5db;
   padding: 20px;
   border: 1px solid #ddd;
   text-align: center;
   border-radius: 10px;
 }
 
-.kategori_{
+.kategori_ {
   display: none;
 }
 
-.svamp img{
+.svamp img {
   margin-top: 8%;
   border-radius: 4%;
 }
@@ -102,11 +138,11 @@ p {
   color: #333;
 }
 
-.description{
+.description {
   padding-top: 7%;
 }
 
-.spiselig{
+.spiselig {
   padding: 8%;
   font-size: 18px;
 }
@@ -130,8 +166,8 @@ button {
   border-radius: 5px;
 }
 
-button:hover{
-  background-color: #16D5DB;
+button:hover {
+  background-color: #16d5db;
 }
 
 h1 {
@@ -140,7 +176,6 @@ h1 {
   margin-top: 20px;
   color: #333;
 }
-
 
 /* Responsive layout for mobile */
 @media (max-width: 768px) {
@@ -161,11 +196,3 @@ h1 {
     margin-bottom: 0;
   }
 }
-
-
-
-
-
-
-
-
